[package]
name = "sane-scan"
version = "0.1.1"
edition = "2018"
license = "MIT"
authors = ["aQaTL <mmsoltys@outlook.com>"]
description = "Bindings and safe wrapper for SANE"
repository = "https://github.com/aQaTL/sane-scan"
keywords = ["scanner"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
bitflags = "1.2.1"

[build-dependencies]
bindgen = "0.59.0"
convert_case = "0.4.0"
